* 2014-01-04 - thorben.betten@open-xchange.com

 - Fix for bug 30469: Sanitize file name prior to saving to drive

* 2014-01-03 - thorben.betten@open-xchange.com

 - Fix for bug 30429: Return a meaningful error message in case SMTP authentication fails
 - Change for bug 27294: Added separate error code to indicate a failed folder deletion attempt

* 2014-01-03 - martin.schneider@open-xchange.com

 - Fix for bug 30404: Correct handling of month of birth for contact subscriptions. 

* 2014-01-03 - tobias.friedrich@open-xchange.com

 - Fix for bug 25160: Added basic support for caldav-sharing, don't include "owner" property, skip implicit folder owner participant
 - Fix for bug 30449: Exclude X-OPEN-XCHANGE-CTYPE attribute for CardDAV synchronization
 - Fix for bug 29776: Corrected access to referenced change types
 - Fix for bug 30435: Don't remove locks upon infostore update events, but on delete events 

* 2014-01-02 - thorben.betten@open-xchange.com

 - Fix for bug 30225: Fixed possible ArrayIndexOutOfBoundsException

* 2014-01-02 - martin.herfurth@open-xchange.com

 - Fix for bug 29754: Better handling for GlobalAddressbookDisable option for RMI and CLI.

* 2014-01-02 - marcus.klein@open-xchange.com

 - Fix for bug 29476: Disabled debug output for Kerberos authentication component.

* 2013-12-31 - thorben.betten@open-xchange.com

 - Change for bug 30425: Add several guards to folder storage API to check for possibly invalid session;
                         e.g. context-is equal to or less than zero

* 2013-12-31 - marcus.klein@open-xchange.com

 - Fix for bug 30408: Migrating the level configuration of the root logger, too.

* 2013-12-30 - marcus.klein@open-xchange.com

 - Fix for bug 30015: Dropping attribute 'date completed' when creating the next occurrence of a task.

* 2013-12-24 - thorben.betten@open-xchange.com

 - Fix for bug 30236: Properly check for duplicate folder on folder rename operation

* 2013-12-21 - martin.schneider@open-xchange.com
