@@ -23,6 +23,7 @@ Import-Package: com.openexchange.cache,
  com.openexchange.log,
  com.openexchange.mail,
  com.openexchange.mail.mime,
+ com.openexchange.mail.mime.converters,
  com.openexchange.mail.mime.datasource,
  com.openexchange.mail.mime.utils,
  com.openexchange.mail.utils,
